# rust-server-basic

./: .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: asset.rs  balance.rs  lib.rs  mod.rs  order.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20260123_075929_init_trading_schema.rs  m20260127_080117_added_password_to_user_table.rs
src/: lib.rs  main.rs
src/routes/: auth_routes.rs  user_routes.rs
src/routes/handlers/: auth_handlers.rs  home_handlers.rs  mod.rs  user_handlers.rs
src/routes/middlewares/: auth_middleware.rs
src/utils/: api_response.rs  constants.rs  jwt.rs
