[package]
name = "trading-app"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration", "entity"]

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
lazy_static = "1.5.0"
serde = "1.0.228"
serde_json = "1.0.149"
env_logger = "0.11.8"
migration = { path = "migration" }
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
entity ={ path = "entity"}
sha256 = "1.6.0"
argon2 = "0.5"